--- a/src/coverMaker/static/css/styles.css
+++ b/src/coverMaker/static/css/styles.css
@@ -25,8 +25,8 @@
   }
 
   body {
-    background-color: #c8d6fb;
-    background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23000000' fill-opacity='0.4' fill-rule='evenodd'%3E%3Cpath d='M0 40L40 0H20L0 20M40 40V20L20 40'/%3E%3C/g%3E%3C/svg%3E");
+    background-color: #d1e1e3;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23000000' fill-opacity='0.18'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   }
 
   form {
@@ -36,6 +36,10 @@
   .main-container {
     @apply px-4 pt-6; 
     @apply lg:px-20;
+  }
+
+  .full-screen {
+    @apply min-h-screen min-w-full;
   }
 
   .title-container {
@@ -61,6 +65,11 @@
 
   .col-md-row {
     @apply flex flex-col md:flex-row;
+  }
+
+  #drop-area {
+    @apply flex flex-col h-2/3 w-2/3 items-center justify-center m-0 fixed;
+    @apply transition-all ease-in duration-150;
   }
 
 }
