--- a/src/coverMaker/templates/index.html
+++ b/src/coverMaker/templates/index.html
@@ -12,8 +12,8 @@
   <div class="flex flex-row items-center justify-center full-screen">
     <div id="drop-area" class="outline-black bg-opacity-10 -z-10">
     </div>
-    <form id="image" action="{{ url_for('loadImage') }}" method="POST" class="form">
-      <input type="file">
+    <form action="{{ url_for('loadImage') }}" method="POST" class="form">
+      <input id="image" type="file">
     </form>
   </div>
   <script src="/static/js/fileDropArea.js"></script>
