--- a/src/coverMaker/static/css/styles.css
+++ b/src/coverMaker/static/css/styles.css
@@ -27,6 +27,7 @@
   body {
     background-color: #d1e1e3;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23000000' fill-opacity='0.18'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    @apply h-screen;
   }
 
   form {
@@ -63,12 +64,19 @@
     @apply focus:ring-white ring-opacity-50;
   }
 
+  .btn-yellow {
+    @apply btn bg-yellow-400 border-yellow-600;
+    @apply hover:bg-yellow-600 hover:text-black hover:border-yellow-600;
+    @apply focus:ring-white ring-opacity-50;
+    @apply disabled:bg-gray-300 disabled:text-black disabled:cursor-not-allowed disabled:opacity-50 disabled:border-black;
+  }
+
   .col-md-row {
     @apply flex flex-col md:flex-row;
   }
 
   #drop-area {
-    @apply flex flex-col h-2/3 w-2/3 items-center justify-center m-0 fixed;
+    @apply flex flex-col h-2/3 w-2/3 items-center justify-center m-0;
     @apply transition-all ease-in duration-150;
   }
 
