--- a/src/coverMaker/templates/index.html
+++ b/src/coverMaker/templates/index.html
@@ -16,10 +16,11 @@
       </form>
     </div>
     <div class="flex flex-row justify-center items-center  space-x-6">
-    <button class="btn-yellow hidden" disabled="disabled" id="previous-btn">Regresar</button>
-    <button class="btn-yellow" disabled="disabled" id="next-btn">Continuar</button>
+    <button class="btn-green btn-disabled hidden" id="previous-btn">Regresar</button>
+    <button class="btn-green btn-disabled" disabled="disabled" id="next-btn">Continuar</button>
     </div>
   </div>
   <script src="/static/js/fileDropArea.js"></script>
+  <script src="/static/js/navigate.js"></script>
 </body>
 </html>
