--- a/src/coverMaker/static/css/processed_styles.css
+++ b/src/coverMaker/static/css/processed_styles.css
@@ -851,7 +851,72 @@ form {
   --tw-ring-opacity: 0.5;
 }
 
-.btn-yellow:disabled {
+.btn-green {
+  border-radius: 0.5rem;
+  border-style: solid;
+  border-width: 2px;
+  font-weight: 600;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  line-height: 2.5rem;
+}
+
+.btn-green:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.btn-green {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.btn-green:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  --tw-ring-opacity: 0.75;
+}
+
+.btn-green {
+  --tw-text-opacity: 1;
+  color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+
+@media (min-width: 1024px) {
+  .btn-green {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    line-height: 1.625;
+  }
+}
+
+.btn-green {
+  --tw-bg-opacity: 1;
+  background-color: rgba(5, 150, 105, var(--tw-bg-opacity));
+  --tw-border-opacity: 1;
+  border-color: rgba(6, 78, 59, var(--tw-border-opacity));
+}
+
+.btn-green:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(52, 211, 153, var(--tw-bg-opacity));
+  --tw-border-opacity: 1;
+  border-color: rgba(5, 150, 105, var(--tw-border-opacity));
+  --tw-text-opacity: 1;
+  color: rgba(0, 0, 0, var(--tw-text-opacity));
+}
+
+.btn-green:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgba(255, 255, 255, var(--tw-ring-opacity));
+}
+
+.btn-green {
+  --tw-ring-opacity: 0.5;
+}
+
+.btn-disabled:disabled {
   --tw-bg-opacity: 1;
   background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
   --tw-border-opacity: 1;
