--- a/src/coverMaker/templates/index.html
+++ b/src/coverMaker/templates/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <div class="flex flex-col items-center justify-center space-y-6 h-screen">
+    <img id="preview" class="hidden">
     <div id="drop-area" class="outline-black bg-opacity-10 -z-10">
       <form action="{{ url_for('loadImage') }}" method="POST" class="form">
       <input id="image" type="file">
