Clear page on button click

--- a/src/coverMaker/templates/index.html
+++ b/src/coverMaker/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div id="box" class="flex flex-col items-center justify-center space-y-6 h-screen mt-8">
+  <div id="box" class="flex flex-col items-center justify-center space-y-6 h-screen my-8">
     <img id="preview" class="max-w-3xl hidden">
     <div id="drop-area" class="outline-black bg-opacity-10 -z-10">
       <form id='uploadForm' action="{{ url_for('loadImage') }}" method="POST" class="form">
