--- a/src/coverMaker/static/css/processed_styles.css
+++ b/src/coverMaker/static/css/processed_styles.css
@@ -927,6 +927,21 @@ form {
   color: rgba(0, 0, 0, var(--tw-text-opacity));
 }
 
+.error {
+  --tw-bg-opacity: 1;
+  background-color: rgba(220, 38, 38, var(--tw-bg-opacity));
+}
+
+.success {
+  --tw-bg-opacity: 1;
+  background-color: rgba(5, 150, 105, var(--tw-bg-opacity));
+}
+
+.msg {
+  --tw-bg-opacity: 1;
+  background-color: rgba(219, 39, 119, var(--tw-bg-opacity));
+}
+
 .col-md-row {
   display: flex;
   flex-direction: column;
