--- a/src/coverMaker/templates/index.html
+++ b/src/coverMaker/templates/index.html
@@ -22,7 +22,7 @@
     <!-- Drop area -->
     <div id="drop-area" class="outline-black bg-opacity-10 -z-10">
       <!-- Form -->
-      <form id='uploadForm' enctype="multipart/form-data" action="{{ url_for('resize') }}" method="POST" class="form">
+      <form id='uploadForm' enctype="multipart/form-data" action="{{ url_for('resize') }}" method="POST" class="flex flex-col items-center space-y-6 form">
         <input id="image" name="image" type="file">
         <button type="submit" class="btn-green">Subir</button>
       </form>
