--- a/src/coverMaker/templates/index.html
+++ b/src/coverMaker/templates/index.html
@@ -17,14 +17,14 @@
   <div id="box" class="flex flex-col items-center justify-center space-y-6 h-screen my-8">
 
     <!-- Image -->
-    <img id="preview" class="max-w-3xl hidden">
+    <img id="preview" class="max-w-3xl hidden" src="{{ url_for('resize') }}">
 
     <!-- Drop area -->
     <div id="drop-area" class="outline-black bg-opacity-10 -z-10">
       <!-- Form -->
       <form id='uploadForm' enctype="multipart/form-data" action="{{ url_for('resize') }}" method="POST" class="flex flex-col items-center space-y-6 form">
         <input id="image" name="image" type="file">
-        <button type="submit" class="btn-green">Subir</button>
+        <button type="submit" id="submit-btn" class="btn-green">Subir</button>
       </form>
     </div>
 
