Show resized image

--- a/src/coverMaker/templates/index.html
+++ b/src/coverMaker/templates/index.html
@@ -17,7 +17,7 @@
   <div id="box" class="flex flex-col items-center justify-center space-y-6 h-screen my-8">
 
     <!-- Image -->
-    <img id="preview" class="max-w-3xl hidden" src="{{ url_for('resize') }}">
+    <img id="preview" class="max-w-3xl hidden" src="{{ url_for('serve') }}">
 
     <!-- Drop area -->
     <div id="drop-area" class="outline-black bg-opacity-10 -z-10">
