--- a/src/coverMaker/templates/index.html
+++ b/src/coverMaker/templates/index.html
@@ -16,14 +16,16 @@
   <!-- Main container -->
   <div id="box" class="flex flex-col items-center justify-center space-y-6 h-screen my-8">
 
-   <div id='preview-box' class="flex flex-row justify-center items-center space-x-6 hidden">
+   <div id='preview-box' class="flex flex-col md:flex-row justify-center items-center space-y-6 md:space-x-6 hidden">
     <!-- Image -->
-    <img id="preview" class="max-w-xl" src="{{ url_for('serve') }}">
+    <div id="crop-box"  class="relative">
+      <img id="preview" class="h-60 md:h-80" src="{{ url_for('serve') }}">
+    </div>
 
     <!-- Crop buttons -->
-    <div class="flex flex-col h-full space-y-4">
-      <img id='uparrow' src="{{ url_for('static', filename='svg/upArrow.svg') }}" class="h-28">
-      <img id='downarrow' src="{{ url_for('static', filename='svg/downArrow.svg') }}" class="h-28">
+    <div class="flex flex-row md:flex-col h-full space-x-10 md:space-x-0 md:space-y-4 justify-center items-center">
+      <img id='uparrow' src="{{ url_for('static', filename='svg/upArrow.svg') }}" class="cursor-pointer h-20 md:h-28">
+      <img id='downarrow' src="{{ url_for('static', filename='svg/downArrow.svg') }}" class="cursor-pointer h-20 md:h-28">
     </div>
 
    </div>
