--- a/src/coverMaker/templates/index.html
+++ b/src/coverMaker/templates/index.html
@@ -47,6 +47,7 @@
   </div>
 
   <!-- Scripts -->
+  <script src="/static/js/helpers.js"></script>
   <script src="/static/js/fileDropArea.js"></script>
   <script src="/static/js/navigate.js"></script>
   <script src="/static/js/flashMessage.js"></script>
