Crop image in server, save and display it

--- a/src/coverMaker/templates/index.html
+++ b/src/coverMaker/templates/index.html
@@ -49,7 +49,7 @@
   <!-- Scripts -->
   <script>
     // Declare here these variables to use Jinja
-    imageName = '{{ g.file }}';
+    imageName = '';
     cropRoute = "{{ url_for('crop') }}";
   </script>
   <script src="/static/js/helpers.js"></script>
