Move banner up and down

--- a/src/coverMaker/templates/index.html
+++ b/src/coverMaker/templates/index.html
@@ -52,11 +52,13 @@
     imageName = '';
     cropRoute = "{{ url_for('crop') }}";
   </script>
+  <script src="/static/js/declarations.js"></script>
   <script src="/static/js/helpers.js"></script>
   <script src="/static/js/fileDropArea.js"></script>
+  <script src="/static/js/moveBanner.js"></script>
+  <script src="/static/js/visualCutter.js"></script>
   <script src="/static/js/navigate.js"></script>
   <script src="/static/js/flashMessage.js"></script>
-  <script src="/static/js/visualCutter.js"></script>
   <script src="/static/js/asyncFormSubmit.js"></script>
 
 </body>
