Make form to send image data to server

--- a/src/coverMaker/templates/index.html
+++ b/src/coverMaker/templates/index.html
@@ -51,6 +51,7 @@
     // Declare here these variables to use Jinja
     imageName = '';
     cropRoute = "{{ url_for('crop') }}";
+    makeImageRoute = "{{ url_for('makeImage') }}";
   </script>
   <script src="/static/js/declarations.js"></script>
   <script src="/static/js/helpers.js"></script>
