Fix bugs, now server receives data

--- a/src/coverMaker/templates/index.html
+++ b/src/coverMaker/templates/index.html
@@ -61,6 +61,7 @@
   <script src="/static/js/navigate.js"></script>
   <script src="/static/js/flashMessage.js"></script>
   <script src="/static/js/asyncFormSubmit.js"></script>
+  <script src="/static/js/makeImage.js"></script>
 
 </body>
 </html>
